--- a/java/java/src/main/resources/application.properties
+++ b/java/java/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=java Test project
+
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringExample
+spring.datasource.username=root
+spring.datasource.password=Anil123#
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
