configured cache and Actuator

--- a/java/java/pom.xml
+++ b/java/java/pom.xml
@@ -62,6 +62,12 @@
       <version>0.12.6</version>
       <scope>runtime</scope>
     </dependency>
+	<!-- ...existing dependencies... -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-cache</artifactId>
+</dependency>
+<!-- ...existing dependencies... -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-jackson</artifactId>
@@ -83,6 +89,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
 	</dependencies>
